Se agregaron xml para la calidad de codigo - build.gradle mejorado V 0.0.1